--- a/bloombook-backend/package.json
+++ b/bloombook-backend/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "rimraf": "^5.0.5",
     "typescript": "^5.4.5"
   },
