--- a/bloombook-backend/package.json
+++ b/bloombook-backend/package.json
@@ -17,6 +17,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.7.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
